Added first element

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Vibe</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>Dobrodošli na društvenu mrežu Vibe!</h1>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
