Implemented login and registration

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         </form>
       </div>
     </div>
+
+    <div class="homepage-container"></div>
     <script type="module" src="/src/js/controller.js"></script>
   </body>
 </html>
