Finished login/register functionality

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <div class="homepage-container"></div>
+    <div class="homepage-container hidden"></div>
     <script type="module" src="/src/js/controller.js"></script>
   </body>
 </html>
