Fixed some login/register issues

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="login-register-container">
-      <h2 class="secondary-heading">Dobrodošao u Vibe!</h2>
+      <!-- <h2 class="secondary-heading">Dobrodošao u Vibe!</h2>
       <h3 class="tertiary-heading">Prijavi se</h3>
       <div class="login-input">
         <form class="form-login-register form-login">
@@ -59,7 +59,7 @@
           </p>
           <button class="btn login-btn">Registriraj se</button>
         </form>
-      </div>
+      </div> -->
     </div>
 
     <div class="homepage-container hidden"></div>
