--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
@@ -60,6 +67,37 @@
           <button class="btn login-btn">Registriraj se</button>
         </form>
       </div> -->
+    </div>
+
+    <div class="modal-overlay hidden-modal">
+      <div class="modify-account-modal">
+        <form class="form-modal">
+          <div class="form-modal-item form-username">
+            <label class="modal-label" htmlFor="">Korisničko ime:</label>
+            <input class="modal-input modal-username" type="text" />
+          </div>
+          <div class="form-modal-item form-email">
+            <label class="modal-label" htmlFor="">Email:</label>
+            <input class="modal-input modal-email" type="email" />
+          </div>
+          <div class="form-modal-item form-password">
+            <label class="modal-label" htmlFor="">Nova lozinka:</label>
+            <input
+              class="modal-input modal-password"
+              type="password"
+              placeholder="Barem 8 znakova"
+            />
+          </div>
+          <div class="form-modal-item form-old-password">
+            <label class="modal-label" htmlFor="">Stara lozinka:</label>
+            <input class="modal-input modal-old-password" type="password" />
+          </div>
+          <button class="modify-account-btn">Izmijeni račun</button>
+        </form>
+        <button class="close-modify-modal">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+      </div>
     </div>
 
     <div class="homepage-container hidden"></div>
