Fixed modify account logic

--- a/index.html
+++ b/index.html
@@ -85,12 +85,16 @@
             <input
               class="modal-input modal-password"
               type="password"
-              placeholder="Barem 8 znakova"
+              placeholder="Barem 8 znakova (neobvezno)"
             />
           </div>
           <div class="form-modal-item form-old-password">
             <label class="modal-label" htmlFor="">Stara lozinka:</label>
-            <input class="modal-input modal-old-password" type="password" />
+            <input
+              class="modal-input modal-old-password"
+              type="password"
+              placeholder="Obavezno"
+            />
           </div>
           <button class="modify-account-btn">Izmijeni račun</button>
         </form>
