Started working on add a profile picture functionality

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div> -->
     </div>
 
-    <div class="modal-overlay hidden-modal">
+    <div class="modal-overlay modify-account-modal-overlay hidden-modal">
       <div class="modify-account-modal">
         <form class="form-modal">
           <div class="form-modal-item form-username">
@@ -97,6 +97,18 @@
             />
           </div>
           <button class="modify-account-btn">Izmijeni račun</button>
+        </form>
+        <button class="close-modify-modal">
+          <i class="fa-solid fa-xmark"></i>
+        </button>
+      </div>
+    </div>
+
+    <div class="modal-overlay profile-picture-modal-overlay hidden-modal">
+      <div class="modify-account-modal">
+        <form class="form-modal">
+          <input type="file" id="fileInput" />
+          <button>Prenesi</button>
         </form>
         <button class="close-modify-modal">
           <i class="fa-solid fa-xmark"></i>
