--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@
 
     <div class="modal-overlay profile-picture-modal-overlay hidden-modal">
       <div class="modify-account-modal">
-        <form class="form-modal">
-          <input type="file" id="fileInput" />
-          <button>Prenesi</button>
+        <form class="form-profile-picture">
+          <label class="custom-file-upload">
+            <input type="file" id="fileInput" accept="image/*" />
+          </label>
+          <button class="profile-picture-btn">Prenesi</button>
         </form>
         <button class="close-modify-modal">
           <i class="fa-solid fa-xmark"></i>
