Translated part of the page on english

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="modify-account-modal">
         <form class="form-modal">
           <div class="form-modal-item form-username">
-            <label class="modal-label" htmlFor="">Korisničko ime:</label>
+            <label class="modal-label" htmlFor="">Username:</label>
             <input class="modal-input modal-username" type="text" />
           </div>
           <div class="form-modal-item form-email">
@@ -81,7 +81,7 @@
             <input class="modal-input modal-email" type="email" />
           </div>
           <div class="form-modal-item form-password">
-            <label class="modal-label" htmlFor="">Nova lozinka:</label>
+            <label class="modal-label" htmlFor="">New password:</label>
             <input
               class="modal-input modal-password"
               type="password"
@@ -89,7 +89,7 @@
             />
           </div>
           <div class="form-modal-item form-old-password">
-            <label class="modal-label" htmlFor="">Stara lozinka:</label>
+            <label class="modal-label" htmlFor="">Old password:</label>
             <input
               class="modal-input modal-old-password"
               type="password"
