--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <input
               class="modal-input modal-password"
               type="password"
-              placeholder="Barem 8 znakova (neobvezno)"
+              placeholder="At least 8 chars (optional)"
             />
           </div>
           <div class="form-modal-item form-old-password">
@@ -93,7 +93,7 @@
             <input
               class="modal-input modal-old-password"
               type="password"
-              placeholder="Obavezno"
+              placeholder="Needed"
             />
           </div>
           <button class="modify-account-btn">Izmijeni račun</button>
